--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/styles.css" />
     <title>My-Portfolio</title>
-</head>
-<body>
-    <H1>nayeem</H1>
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h4>Mary</h4>
+        <ul>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li>
+            <a href=""><button>Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
