--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>My-Portfolio</title>
   </head>
-  <body>
+  <body class="open-sans">
     <header>
+      <!-- nav menu -->
       <nav>
-        <h4>Mary</h4>
+        <h4 class="logo">Ma<span class="logo-single-word">r</span>y</h4>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
           <li>
-            <a href=""><button>Hire Me</button></a>
+            <a href=""><button class="nev-btn">Hire Me</button></a>
           </li>
         </ul>
       </nav>
+      <!-- nav menu -->
     </header>
     <main></main>
     <footer></footer>
