--- a/index.html
+++ b/index.html
@@ -14,18 +14,40 @@
   </head>
   <body class="open-sans">
     <header>
-      <!-- nav menu -->
-      <nav>
-        <h4 class="logo">Ma<span class="logo-single-word">r</span>y</h4>
-        <ul>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Blog</a></li>
-          <li>
-            <a href=""><button class="nev-btn">Hire Me</button></a>
-          </li>
-        </ul>
-      </nav>
-      <!-- nav menu -->
+      <section class="hero">
+        <!-- nav menu -->
+        <nav>
+          <h4 class="logo">Ma<span class="logo-single-word">r</span>y</h4>
+          <ul>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li>
+              <a href=""><button class="nev-btn">Hire Me</button></a>
+            </li>
+          </ul>
+        </nav>
+        <!-- nav menu -->
+
+        <!-- ============================================== -->
+
+        <!-- hero section -->
+        <div class="hero-div">
+          <div class="text-hero">
+            <h3 class="wlcm-text">Hi, I am</h3>
+            <h1 class="hero-mainfont">Mary Hardy</h1>
+            <p class="hero-pera">
+              Shot what able cold new see hold.Friendly as an betrayed formerly
+              he. Morning because as to society behaved moments.
+            </p>
+            <a href=""><button class="nev-btn">Download CV</button></a>
+            <a href=""><button class="nev-btn">Contact</button></a>
+          </div>
+          <div>
+            <img src="images/hardy.png" alt="" />
+          </div>
+        </div>
+        <!-- hero section -->
+      </section>
     </header>
     <main></main>
     <footer></footer>
