--- a/index.html
+++ b/index.html
@@ -49,7 +49,40 @@
         <!-- hero section -->
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- about us -->
+      <section class="about">
+        <div class="sub-about">
+          <h3 class="section-titel">About Me</h3>
+          <p class="discripsiton">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+          <div class="address">
+            <div class="address-cart">
+              <p class="address-pera">Name:</p>
+              <h3 class="address-titel">Mary Hardy</h3>
+            </div>
+            <div class="address-cart">
+              <p class="address-pera">Email:</p>
+              <h3 class="address-titel">info@gmail.com</h3>
+            </div>
+            <div class="address-cart">
+              <p class="address-pera">Date of birth:</p>
+              <h3 class="address-titel">11 November 1987</h3>
+            </div>
+            <div class="address-cart">
+              <p class="address-pera">From:</p>
+              <h3 class="address-titel">Los Angeles, USA</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- about us -->
+    </main>
     <footer></footer>
   </body>
 </html>
